<resources>

    <string name="app_name">NewsFetcher</string>

    <!--    For bottom navigation bar-->
    <string name="main">Главная</string>
    <string name="favorite">Избранное</string>
    <string name="search">Поиск</string>
    <string name="sources">Источники</string>
    <string name="like_sources">Любимые издания</string>

    <!--    For webview screen-->
    <string name="loadSite">Сайт загружается</string>
    <string name="failUrl">Загрузка сайта невозможна</string>
    <string name="offInternet">Нет доступа в интернет</string>

    <!--    For detail screen-->
    <string name="loading">Loading</string>
    <string name="TitleLoad">TitleLoad</string>
    <string name="non_text">non text</string>
    <string name="popularity_title">Самые популярные заголовки</string>
    <string name="name_source">Name source</string>
    <string name="title_link_to_source_Detail">Ссылка на источник</string>
    <string name="link_to_source_Detail">http//........</string>
    <string name="date_for_detail">2022_12_12</string>
    <string name="author_published">Автор статьи</string>
    <string name="descriptionload">DescriptionLoad</string>
    <string name="noname">не известен</string>

    <!--    For search screen-->
    <string name="input_key_word_for_search">введите слово для поиска</string>

    <!--    For setting dialog fragment-->
    <string name="search_setting_menu_title">Настройки фильтра для поиска</string>
    <string name="data_from">2022_11_16</string>
    <string name="data_to">2022_12_25</string>
    <string name="DataToText">До</string>
    <string name="DataFromText">От</string>
    <string name="search_period">За какой период</string>
    <string name="search_in">Как искать</string>
    <string name="in_titles">в заголовках статей</string>
    <string name="in_descriptions">в содержании статей</string>
    <string name="search_in_all_content">искать по всему содержимому</string>
    <string name="how_to_sort">Как сортировать</string>
    <string name="relevancy">по релевантности</string>
    <string name="popularity">по популярности</string>
    <string name="publishedAt">по дате</string>
    <string name="cancel_current_search">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    For Favourite Dialog Screen-->
    <string name="business">Бизнес</string>
    <string name="entertainment">Развлечения</string>
    <string name="general">Главные</string>
    <string name="health">Здоровье</string>
    <string name="science">Наука</string>
    <string name="sports">Спорт</string>
    <string name="technology">Технологии</string>
    <string name="favourite_type_news">Тип предпочитаемых новостей</string>
    <string name="author">author</string>
    <string name="english">английский</string>
    <string name="russia">русский</string>
    <string name="source_language">Язык печати издания</string>
    <string name="news_source_type">Тип новостного издания</string>


</resources>

