<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:id="@+id/popupFavouriteNewsSettingLayout"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <TextView
       android:id="@+id/tvTitleFavourite"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="?attr/colorPrimary"
       android:text="@string/favourite_type_news"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <ImageView
       android:id="@+id/ivSeparatorLineFavouriteSetting"
       android:layout_width="match_parent"
       android:layout_height="3dp"
       android:layout_marginTop="5dp"
       android:backgroundTint="?attr/colorPrimary"
       app:layout_constraintEnd_toEndOf="@+id/tvTitleFavourite"
       app:layout_constraintStart_toStartOf="@+id/tvTitleFavourite"
       app:layout_constraintTop_toBottomOf="@+id/tvTitleFavourite" />

   <TextView
       android:id="@+id/tvBusinessFavourite"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:background="?attr/colorPrimary"
       android:text="@string/business"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.494"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/ivSeparatorLineFavouriteSetting" />

   <TextView
       android:id="@+id/tvEntertainmentFavourite"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:background="?attr/colorPrimary"
       android:text="@string/entertainment"
       app:layout_constraintEnd_toEndOf="@+id/tvBusinessFavourite"
       app:layout_constraintStart_toStartOf="@+id/tvBusinessFavourite"
       app:layout_constraintTop_toBottomOf="@+id/tvBusinessFavourite" />

   <TextView
       android:id="@+id/tvGeneralFavourite"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:background="?attr/colorPrimary"
       android:text="@string/general"
       app:layout_constraintEnd_toEndOf="@+id/tvEntertainmentFavourite"
       app:layout_constraintStart_toStartOf="@+id/tvEntertainmentFavourite"
       app:layout_constraintTop_toBottomOf="@+id/tvEntertainmentFavourite" />

   <TextView
       android:id="@+id/tvHealthFavourite"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:background="?attr/colorPrimary"
       android:text="@string/health"
       app:layout_constraintEnd_toEndOf="@+id/tvGeneralFavourite"
       app:layout_constraintStart_toStartOf="@+id/tvGeneralFavourite"
       app:layout_constraintTop_toBottomOf="@+id/tvGeneralFavourite" />

   <TextView
       android:id="@+id/tvScienceFavourite"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:background="?attr/colorPrimary"
       android:text="@string/science"
       app:layout_constraintEnd_toEndOf="@+id/tvHealthFavourite"
       app:layout_constraintStart_toStartOf="@+id/tvHealthFavourite"
       app:layout_constraintTop_toBottomOf="@+id/tvHealthFavourite" />

   <TextView
       android:id="@+id/tvSportsFavourite"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:background="?attr/colorPrimary"
       android:text="@string/sports"
       app:layout_constraintEnd_toEndOf="@+id/tvScienceFavourite"
       app:layout_constraintStart_toStartOf="@+id/tvScienceFavourite"
       app:layout_constraintTop_toBottomOf="@+id/tvScienceFavourite" />

   <TextView
       android:id="@+id/tvTechnologyFavourite"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:background="?attr/colorPrimary"
       android:text="@string/technology"
       app:layout_constraintEnd_toEndOf="@+id/tvSportsFavourite"
       app:layout_constraintStart_toStartOf="@+id/tvSportsFavourite"
       app:layout_constraintTop_toBottomOf="@+id/tvSportsFavourite" />

   <Button
       android:id="@+id/btnCancelFavouriteSetting"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="11sp"
       android:text="@string/cancel"
       app:layout_constraintBottom_toBottomOf="@+id/btnSaveFavouriteSetting"
       app:layout_constraintEnd_toStartOf="@id/btnSaveFavouriteSetting"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="@+id/btnSaveFavouriteSetting" />

   <Button
       android:id="@+id/btnSaveFavouriteSetting"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:textSize="11sp"
       android:text="@string/save"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@+id/btnCancelFavouriteSetting"
       app:layout_constraintTop_toBottomOf="@+id/tvTechnologyFavourite" />


</androidx.constraintlayout.widget.ConstraintLayout>