<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvNameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_source"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivNewsDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:importantForAutofill="auto"
        android:maxHeight="300dp"
        android:minHeight="200dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameDetail" />

    <TextView
        android:id="@+id/tvDataDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:hint="@string/date_for_detail"
        android:textColor="?attr/colorAccented"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivNewsDetail" />

    <TextView
        android:id="@+id/tvTitleDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/TitleLoad"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvDataDetail"
        app:layout_constraintTop_toBottomOf="@+id/tvDataDetail" />

    <TextView
        android:id="@+id/tvDescriptionDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/descriptionload"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvTitleDetail"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleDetail" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/title_link_to_source_Detail"
        app:layout_constraintStart_toStartOf="@+id/tvDescriptionDetail"
        app:layout_constraintTop_toBottomOf="@+id/tvDescriptionDetail" />

    <TextView
        android:id="@+id/tvLinkToSourceDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:hint="@string/name_source"
        android:text="@string/link_to_source_Detail"
        android:textColor="@color/blue_700"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/author_published"
        app:layout_constraintStart_toStartOf="@+id/tvLinkToSourceDetail"
        app:layout_constraintTop_toBottomOf="@+id/tvLinkToSourceDetail" />

    <TextView
        android:id="@+id/tvAuthorDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/author"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/pbDetailScreen"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivNewsDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ivNewsDetail"
        app:layout_constraintTop_toTopOf="@+id/ivNewsDetail" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabGoBackFromDetailScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toTopOf="@+id/bnvBarDetail"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bnvBarDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:itemTextColor="?attr/colorPrimary"
        android:background="?attr/colorSurfaceVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu" />

</androidx.constraintlayout.widget.ConstraintLayout>